--- a/resources/application.conf
+++ b/resources/application.conf
@@ -7,3 +7,10 @@ ktor {
         modules = [ com.androiderik.ApplicationKt.module ]
     }
 }
+
+jwt {
+        secret = "secret"
+        issuer = "http://0.0.0.0:8001/"
+        audience = "http://0.0.0.0:8001/hello"
+        realm = "Access to 'hello'"
+}
