--- a/resources/application.conf
+++ b/resources/application.conf
@@ -1,4 +1,5 @@
 ktor {
+    development = true
     deployment {
         port = 8001
         port = ${?PORT}
@@ -10,7 +11,7 @@ ktor {
 
 jwt {
         secret = "secret"
-        issuer = "http://0.0.0.0:8001/"
-        audience = "http://0.0.0.0:8001/hello"
+        issuer = "http://192.168.5.60:8001/"
+        audience = "http://192.168.5.60:8001/hello"
         realm = "Access to 'hello'"
 }
